objects/WorkItem__c.object
<CustomObject>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>SprintToWorkItems</relationshipLabel>
        <relationshipName>SprinToWorkItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <description>Work item story points. It can only be 1, 2, 3, 5, 8 or 13.</description>
        <label>Story Points</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Work item type. It can be User Story (the usual option) or a Bug</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User Story</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>WorkItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WorkItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Done_cant_be_change</fullName>
        <active>false</active>
        <errorConditionFormula>IF(PRIORVALUE(Status__c) = &quot;In Progress&quot; &amp;&amp;  ISCHANGED(Status__c), ISPICKVAL(Status__c, &quot;Not Started&quot;), IF(PRIORVALUE(Status__c) = &quot;Done&quot;, ISPICKVAL(Status__c, &quot;Not Started&quot;) || ISPICKVAL(Status__c, &quot;In Progress&quot;), PRIORVALUE(Status__c) = &quot;Done&quot;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The order goes: Not Started -&gt; In Progress -&gt; Done.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sprint_cant_be_modified</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Sprint__c )</errorConditionFormula>
        <errorDisplayField>Sprint__c</errorDisplayField>
        <errorMessage>Sprint cant be modified</errorMessage>
    </validationRules>
</CustomObject>